[BUGFIX] Make CSS Styles for file navframe work again
Due to the registration of the navframe via
the dispatcher script, the CSS Styles do not fit
anymore.

The patch fixes the places of the old occurences
with the new styles.

Releases: master
Resolves: #65911
Reviewed-on: http://review.typo3.org/38017
Tested-by: Andreas Fernandez <andreas.fernandez@aspedia.de>
Tested-by: Christian Kuhn <lolli@schwarzbu.ch>

--- a/typo3/sysext/t3skin/Resources/Private/Styles/TYPO3/_element_tree.less
+++ b/typo3/sysext/t3skin/Resources/Private/Styles/TYPO3/_element_tree.less
@@ -122,7 +122,7 @@ p.c-refresh img {
 }
 
 #typo3-pagetree #typo3-docheader div.buttonsright,
-#typo3-alt-file-navframe-php #typo3-docheader div.buttonsright {
+#ext-backend-Modules-FileSystemNavigationFrame-index-php #typo3-docheader div.buttonsright {
 	margin-right: 3px;
 }
 
@@ -154,13 +154,13 @@ table.t3-tree-config {
 //
 
 body#typo3-pagetree,
-body#typo3-alt-file-navframe-php {
+body#ext-backend-Modules-FileSystemNavigationFrame-index-php {
 	margin: 0;
 	padding: 0;
 }
 
 body#typo3-pagetree #typo3-inner-docbody,
-body#typo3-alt-file-navframe-php #typo3-inner-docbody {
+body#ext-backend-Modules-FileSystemNavigationFrame-index-php #typo3-inner-docbody {
 	padding: 0 0 10px 0;
 }
 
@@ -308,7 +308,7 @@ ul.tree div.treeLinkItem span.dragIcon {
 }
 
 #typo3-pagetree #typo3-docheader img,
-#typo3-alt-file-navframe-php #typo3-docheader img {
+#ext-backend-Modules-FileSystemNavigationFrame-index-php #typo3-docheader img {
 	margin: 2px;
 }
 
@@ -330,13 +330,13 @@ ul.tree div.treeLinkItem span.dragIcon {
 //
 
 body#typo3-pagetree,
-body#typo3-alt-file-navframe-php {
+body#ext-backend-Modules-FileSystemNavigationFrame-index-php {
 	background: #ebebeb;
 }
 
-#typo3-alt-file-navframe-php #typo3-docbody,
-#typo3-alt-file-navframe-php #typo3-docheader-row1,
-#typo3-alt-file-navframe-php #typo3-docheader-row2,
+#ext-backend-Modules-FileSystemNavigationFrame-index-php #typo3-docbody,
+#ext-backend-Modules-FileSystemNavigationFrame-index-php #typo3-docheader-row1,
+#ext-backend-Modules-FileSystemNavigationFrame-index-php #typo3-docheader-row2,
 .typo3-pagetree-indicatorBar-item,
 #typo3-pagetree-topPanelItems,
 #typo3-pagetree-topPanel .typo3-pagetree-topPanel-item,
@@ -347,7 +347,7 @@ body#typo3-alt-file-navframe-php {
 	background-repeat: repeat-y;
 }
 
-#typo3-alt-file-navframe-php #typo3-docbody,
+#ext-backend-Modules-FileSystemNavigationFrame-index-php #typo3-docbody,
 #typo3-pagetree-treeContainer {
 	border-right: 1px solid @navigation-border;
 	background-color: @navigation-bg;
